toml-pretty-deser/tests/snapshots/a01__basic_missing.snap
---
source: toml-pretty-deser/tests/a01.rs
expression: "errors[0].pretty(\"test.toml\")"
---
  ╭─test.toml
1 │
  ┆ ┬
  ┆ │
  ┆ ╰─ Missing required key: 'a_u8'.
──╯
