toml-pretty-deser/tests/snapshots/a01__basic_unknown.snap
---
source: toml-pretty-deser/tests/a01.rs
expression: "errors[0].pretty(\"test.toml\")"
---
  ╭─test.toml
  ┆
1 │ 
2 │         shu = 23
  ┆         ─┬─
  ┆          │
  ┆          ╰─────── Unknown key.
──╯
Hint: All known accepted values have been used.
