toml-pretty-deser/tests/snapshots/a01__basic_unknown_in_nested.snap
---
source: toml-pretty-deser/tests/a01.rs
expression: "e.pretty(\"test.toml\")"
---
Error 1/3
   ╭─test.toml
   ┆
11 │         [nested_struct.double]
12 │             sha = 23
   ┆                     ┬
   ┆                     │
   ┆                     ╰─ Missing required key: 'double_u8'.
───╯

Error 2/3
   ╭─test.toml
   ┆
11 │         [nested_struct.double]
12 │             sha = 23
   ┆             ─┬─
   ┆              │
   ┆              ╰─────── Unknown key.
───╯
Hint: Did you mean: 'double_u8'?

Error 3/3
  ╭─test.toml
  ┆
8 │         [nested_struct]
9 │             shu = 23
  ┆             ─┬─
  ┆              │
  ┆              ╰─────── Unknown key.
──╯
Hint: All known accepted values have been used.
