toml-pretty-deser/tests/snapshots/a01__box_nested_inner_field_missing.snap
---
source: toml-pretty-deser/tests/a01.rs
expression: "e.pretty(\"test.toml\")"
---
Error 1/1
  ╭─test.toml
  ┆
3 │         [boxed]
  ┆         ───┬───
  ┆            │
  ┆            ╰──── Missing required key: 'value'.
──╯
