toml-pretty-deser/tests/snapshots/a01__box_nested_wrong_type.snap
---
source: toml-pretty-deser/tests/a01.rs
expression: "e.pretty(\"test.toml\")"
---
Error 1/1
  ╭─test.toml
  ┆
3 │         [boxed]
4 │             name = 123
  ┆                    ─┬─
  ┆                     │
  ┆                     ╰── Wrong type: expected string, found integer.
──╯
Hint: This value has the wrong type.
