toml-pretty-deser/tests/snapshots/a01__error_in_vec.snap
---
source: toml-pretty-deser/tests/a01.rs
expression: "errors[0].pretty(\"test.toml\")"
---
  ╭─test.toml
  ┆
1 │ 
2 │         #a_u8 = 1
3 │         opt_u8 =2
4 │         vec_u8 = ['a']
  ┆                   ─┬─
  ┆                    │
  ┆                    ╰─── Wrong type: expected u8, found string
──╯
Hint: This value has the wrong type.
